cambio hover en destinos disponibles

--- a/index.html
+++ b/index.html
@@ -105,23 +105,28 @@
             <div class="row service__content justify-content-center mt-2 mt-lg-4">
                 <div class="col-9 col-md-7 col-lg-3">
                     <img src="img/beach.svg" alt="">
-                    <h6>Cancun</h6>
-                    <span>
+                    <h6>Cancún</h6>
+
+                    <span class="d-xl-inline-flex justify-content-between w-50">
                         <button class="btn">Cotizar</button>
-                    </span>                
+                        <button class="btn">Detalles</button>
+                    </span>
+
                 </div>
                 <div class="col-9 col-md-7 col-lg-3">
                     <img src="img/new-york.svg" alt="">
                     <h6>New York</h6>
-                    <span>
+                    <span class="d-xl-inline-flex justify-content-between w-50">
                         <button class="btn">Cotizar</button>
+                        <button class="btn">Detalles</button>
                     </span>
                 </div>
                 <div class="col-9 col-md-7 col-lg-3">
                     <img src="img/beach.svg" alt="">
                     <h6>Miami</h6>
-                    <span>
+                    <span class="d-xl-inline-flex justify-content-between w-50">
                         <button class="btn">Cotizar</button>
+                        <button class="btn">Detalles</button>
                     </span>
                 </div>
             </div>
@@ -130,15 +135,17 @@
                 <div class="col-9 col-md-7 col-lg-3">
                     <img src="img/paris.svg" alt="">
                     <h6>Paris</h6>
-                    <span>
+                    <span class="d-xl-inline-flex justify-content-between w-50">
                         <button class="btn">Cotizar</button>
+                        <button class="btn">Detalles</button>
                     </span>
                 </div>
                 <div class="col-9 col-md-7 col-lg-3">
                     <img src="img/coliseum.svg" alt="">
                     <h6>Roma</h6>
-                    <span>
+                    <span class="d-xl-inline-flex justify-content-between w-50">
                         <button class="btn">Cotizar</button>
+                        <button class="btn">Detalles</button>
                     </span>
                 </div>
             </div>
@@ -155,7 +162,7 @@
         <!-- SIMULADOR DE VIAJE -->
 
         <div>
-
+            
         </div>
 
         <!-- CONTACTO -->
