incomrporacion de arreglos y obsejos, funcion de cotizacion test

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <!-- Boton temporal para cotizar -->
             <div class="col-12 text-center">
-                <button class="btn">Cotizar</button>
+                <button class="btn" onclick="cotizar()">COTIZAR TEST</button>
             </div>
         </div>
         <hr>
