--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navBar__content">
                 <div class="navBar__content__link navbar-nav w-50 justify-content-around">
-                    <a class="nav-item nav-link " href="#who">Quien somos</a>
-                    <a class="nav-item nav-link " href="#service">Destinos</a>
-                    <a class="nav-item nav-link " href="#travel">Viajar</a>
-                    <a class="nav-item nav-link " href="#contact">Contacto</a>
+                    <a class="nav-item nav-link" href="#who">Quien somos</a>
+                    <a class="nav-item nav-link" href="#service">Destinos</a>
+                    <a class="nav-item nav-link" href="#travel">Viajar</a>
+                    <a class="nav-item nav-link" href="#contact">Contacto</a>
                 </div>
             </div>
         </nav>
@@ -49,7 +49,7 @@
         <div class="banner container-fluid">
             <div class="banner__overlay"></div>
             <video autoplay muted loop>
-                <source src="media/vacation.mp4" type="video/mp4">
+                <source src="media/vacation.mp4" type="video/mp4" />
             </video>
 
             <div class="container-fluid">
@@ -57,16 +57,13 @@
                     <div class="col-8">
                         <h1>TourApp</h1>
                         <p>Descubre los mejores destinos para disfrutar</p>
-
                     </div>
                 </div>
 
                 <div class="row banner__arrow" onclick="location.href='#who'">
                     <span class="banner__content__arrow"></span>
                 </div>
-
             </div>
-
         </div>
 
         <!-- QUIEN SOMOS  -->
@@ -74,33 +71,34 @@
              / HISTORIA -->
 
         <div class="container-fluid" id="who">
-
             <div class="container-fluid">
                 <div class="row who__content justify-content-center align-items-center p-2 p-lg-5 m-auto">
-
                     <div class="col-12 col-lg-4 text-center who__content__icon">
-                        <img src="img/travel.svg" alt="">
+                        <img src="img/travel.svg" alt="" />
                     </div>
 
-                    <div class="col-12 col-lg-4 who__content__text ">
+                    <div class="col-12 col-lg-4 who__content__text">
                         <h2>Nosotros</h2>
-                        <p>Queremos que disfrutes ofreciendote los mejores tours a los lugares que siempre soñaste
-                            conocer</p>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, enim?</p>
+                        <p>
+                            Queremos que disfrutes ofreciendote los mejores tours a los
+                            lugares que siempre soñaste conocer
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Necessitatibus, enim?
+                        </p>
                     </div>
-
                 </div>
             </div>
-
         </div>
 
         <!-- SERVICIOS / DESTINOS DISPONIBLES -->
 
         <div class="container-fluid text-center pt-5 pb-lg-5" id="service">
-
             <!-- DETALLES DE LOS DESTINOS MODAL -->
 
-            <div class="modal fade text-dark" id="serviceModal" tabindex="-1" role="dialog" aria-labelledby="serviceModalLabel" aria-hidden="true">
+            <div class="modal fade text-dark" id="serviceModal" tabindex="-1" role="dialog"
+                aria-labelledby="serviceModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -109,49 +107,195 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body">
-                            Cuerpo del modal
-                        </div>
+                        <div class="modal-body">Cuerpo del modal</div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                Cerrar
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
 
         <!-- SIMULADOR DE VIAJE -->
 
-        <hr>
-
-        <div class="container-fluid pb-lg-5" id="travel">
+        <div class="container-fluid pb-lg-5 mb-lg-5" id="travel">
 
             <div class="travel__title row justify-content-center">
                 <h2>Viajar</h2>
             </div>
 
-
             <div class="travel__arrows row justify-content-center align-content-center">
                 <div class="col-12">
                     <ol class="travel__arrows__content d-none d-md-block">
-                        <li>Datos</li>
-                        <li>Destino</li>
-                        <li>Cuantos van</li>
-                        <li>Hotel</li>
-                        <li>Cotización</li>
+                        <li><a href="">Datos</a></li>
+                        <li><a href="">Destino</a></li>
+                        <li><a href="">Cuantos</a> van</li>
+                        <li><a href="">Hotel</a></li>
+                        <li><a href="">Cotización</a></li>
                     </ol>
                 </div>
             </div>
 
-            <!-- Boton temporal para cotizar -->
-            <div class="col-12 text-center">
-                <button class="btn" onclick="cotizar()">COTIZAR TEST</button>
+            <!-- Fila del formulario de viajes -->
+            <div class="row justify-content-center align-content-center">
+
+                <!-- Form dinamino -->
+                <form action="" class="travel__form col-10 col-lg-6 mt-md-3">
+
+                    <!-- DATOS FORM -->
+                    <div class="row travel__form__datos justify-content-center align-content-center p-1"
+                        id="tavelDatos">
+                        <div class="col-12 p-md-3 pb-3 text-center">
+                            <p>Por favor ingresa tus datos</p>
+                        </div>
+
+                        <div class="col-12 col-md-5 p-md-3">
+                            <label for="" class="form-label">Nombre:</label>
+                            <input type="text" class="form-control" id="" />
+                        </div>
+
+                        <div class="col-12 col-md-5 p-md-3">
+                            <label for="" class="form-label">Email:</label>
+                            <input type="email" class="form-control" id="" />
+                        </div>
+
+                        <div class="col-12 col-md-10 text-center">
+                            <button class="btn" onclick="nextBock()">Siguiente</button>
+                        </div>
+
+                    </div>
+
+                    <!-- DESTINO FORM -->
+
+                    <div class="row travel__form__cities justify-content-center align-content-center p-1"
+                        id="tavelCities">
+                        <div class="col-12 p-md-3 pb-3 text-center">
+                            <p>Seleccione la ciudad de destino</p>
+                        </div>
+
+                        <div class="col-10 col-md-4 travel__contenedor__cities" id='' onclick="selectCitie(this)">
+                            <span>Cancun</span>
+                            <img src="img/avion.svg" alt="">
+                        </div>
+
+                        <div class="col-10 col-md-4 travel__contenedor__cities" id='' onclick="selectCitie(this)">
+                            <span>New York</span>
+                            <img src="img/avion.svg" alt="">
+                        </div>
+
+                        <div class="col-10 col-md-4 travel__contenedor__cities" id='' onclick="selectCitie(this)">
+                            <span>Miami</span>
+                            <img src="img/avion.svg" alt="">
+                        </div>
+
+                        <div class="col-10 col-md-4 travel__contenedor__cities" id='' onclick="selectCitie(this)">
+                            <span>Paris</span>
+                            <img src="img/avion.svg" alt="">
+                        </div>
+
+                        <div class="col-10 col-md-4 travel__contenedor__cities" id='' onclick="selectCitie(this)">
+                            <span>Roma</span>
+                            <img src="img/avion.svg" alt="">
+                        </div>
+
+                        <div class="col-12 col-md-10 text-center">
+                            <button class="btn">Siguiente</button>
+                        </div>
+
+                    </div>
+
+                    <!-- CUANTOS SON FORM -->
+
+                    <div class="row travel__form__people justify-content-center align-content-center p-1"
+                        id="travelPassengers">
+                        <div class="col-12 p-md-3 pb-3 text-center">
+                            <p>Cuantos van a viajar ?</p>
+                        </div>
+
+                        <div class="col-12 col-md-10 p-md-3">
+                            <label for="" class="form-label">Numero de pasajeros:</label>
+                            <input type="number" min="0" max="100" maxlength="3" class="form-control" id="" />
+                        </div>
+
+
+                        <div class="col-12 col-md-10 text-center">
+                            <button class="btn">Siguiente</button>
+                        </div>
+
+                    </div>
+
+                    <!-- SELECT HOTEL STARS -->
+
+                    <div class="row travel__form__hotel justify-content-center align-content-center p-1"
+                        id="travelHotel">
+                        <div class="col-12 p-md-3 pb-3 text-center">
+                            <p>Selecione el hotel</p>
+                        </div>
+
+                        <div class="col-10 col-md-3 travel__contenedor__hotel" id='' onclick="">
+                            <img src="img/three.svg" alt="">
+                        </div>
+
+                        <div class="col-10 col-md-3 travel__contenedor__hotel" id='' onclick="">
+                            <img src="img/four.svg" alt="">
+                        </div>
+
+                        <div class="col-10 col-md-3 travel__contenedor__hotel" id='' onclick="">
+                            <img src="img/five.svg" alt="">
+                        </div>
+
+
+                        <div class="col-12 col-md-5 text-center">
+                            <button class="btn">Destalles</button>
+                        </div>
+                        <div class="col-12 col-md-5 text-center">
+                            <button class="btn">Siguiente</button>
+                        </div>
+
+
+                    </div>
+
+                    <!-- CUANTOS SON FORM -->
+
+                    <div class="row travel__form__result justify-content-center align-content-center p-1"
+                        id="travelResult">
+                        <div class="col-12 p-md-3 pb-3 text-center">
+                            <p>Resultado de la cotizacion</p>
+                        </div>
+
+                        <div class="col-12 col-md-10 p-md-3">
+                            <span>Nombre: </span>
+                        </div>
+                        <div class="col-12 col-md-10 p-md-3">
+                            <span>Destino: </span>
+                        </div>
+                        <div class="col-12 col-md-10 p-md-3">
+                            <span>Pasajeres: </span>
+                        </div>
+
+                        <div class="col-12 col-md-10 p-md-3">
+                            <span>Total: </span>
+                        </div>
+
+                        <div class="col-12 col-md-5 text-center">
+                            <button class="btn">Volver a cotizar</button>
+                        </div>
+                        <div class="col-12 col-md-5 text-center">
+                            <button class="btn">Ver fechas disponibles</button>
+                        </div>
+
+                    </div>
+
+                </form>
             </div>
+
+            <!-- Boton temporal para cotizar -->
+            <!-- <div class="col-12 text-center">
+                <button class="btn" onclick="cotizar()">COTIZAR TEST</button>
+            </div> -->
         </div>
-        
-        <hr>    
 
         <!-- CONTACTO -->
         <!-- / NOMBRE
@@ -161,23 +305,19 @@
             / MENSAJE -->
 
         <div class="container" id="contact">
-
-            <div class="row justify-content-center mt-md-5 mb-5">
-
+            <div class="row justify-content-center mt-5 mb-5">
                 <div class="contact__form col-10 col-lg-6 p-3 p-md-4">
-
-                    <form class="contact__form__content row justify-content-center ">
-
+                    <form class="contact__form__content row justify-content-center">
                         <div class="col-12 text-center">
                             <h2>Contactanos</h2>
                         </div>
                         <div class="col-12">
                             <label for="" class="form-label">Nombre:</label>
-                            <input type="text" class="form-control" id="inputEmail4">
+                            <input type="text" class="form-control" id="" />
                         </div>
                         <div class="col-12">
                             <label for="" class="form-label">Email:</label>
-                            <input type="email" class="form-control" id="inputEmail4">
+                            <input type="email" class="form-control" id="" />
                         </div>
                         <div class="col-12">
                             <label for="" class="form-label">Mensaje:</label>
@@ -188,13 +328,8 @@
                             <button class="btn">Enviar</button>
                         </div>
                     </form>
-
                 </div>
-
             </div>
-
-
-
         </div>
     </main>
 
@@ -203,51 +338,41 @@
          / TERMINOS Y CONDICONES -->
 
     <div class="container-fluid footer">
-
         <div class="footer__content row justify-content-center">
-
             <div class="footer__content_layout col-10">
-
                 <div class="footer__content__row row justify-content-center align-content-center">
-
                     <!-- NEWSLETTER -->
                     <div class="footer__content__row__newsletter col-10 col-md-5 col-lg-5 text-center">
-                        <p>
-                            Ingresa tu correo para recibir ofertas
-                        </p>
+                        <p>Ingresa tu correo para recibir ofertas</p>
                         <form action="" name="newsForm" onsubmit="return suscribeNewsLetter()" method="">
-                            <div class="form-group" >
+                            <div class="form-group">
                                 <input type="email" name="email" id="" aria-describedby="helpId"
-                                    placeholder="Tu email y presiona enter">
+                                    placeholder="Tu email y presiona enter" />
                             </div>
                             <div class="form-group">
                                 <p>
-                                    Al enviar mí email estoy aceptando las <a href="#">Políticas de Privacidad.</a>
+                                    Al enviar mí email estoy aceptando las
+                                    <a href="#">Políticas de Privacidad.</a>
                                 </p>
                             </div>
-                            <input type="submit" value="Submit">
+                            <input type="submit" value="Submit" />
                         </form>
                     </div>
 
                     <!-- SOCIAL MEDIA -->
                     <div class="footer__content__row__social col-12 col-lg-2 col-xl-1 text-center">
-                        <p>
-                            Siguenos
-                        </p>
+                        <p>Siguenos</p>
                         <span class="d-flex justify-content-center">
-                            <a href=""><img src="img/facebook.svg" alt=""></a>
-                            <a href=""><img src="img/instagram.svg" alt=""></a>
+                            <a href=""><img src="img/facebook.svg" alt="" /></a>
+                            <a href=""><img src="img/instagram.svg" alt="" /></a>
                         </span>
                     </div>
 
                     <!-- CUSTOMER SERVICE -->
 
                     <div class="footer__content__row__customer col-12 col-lg-5 text-center">
-                        <p>
-                            Servicio al cliente
-                        </p>
+                        <p>Servicio al cliente</p>
                         <span class="d-flex flex-column justify-content-around">
-
                             <ul>
                                 <li>
                                     <a href="#">Contactanos</a>
@@ -258,12 +383,9 @@
                             </ul>
                         </span>
                     </div>
-
                 </div>
             </div>
-
         </div>
-
     </div>
 
     <!-- JS Bootstrap -->
@@ -273,6 +395,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <!-- Axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- JS -->
     <script src="js/script.js"></script>
 </body>
