--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                             Necessitatibus, enim?
                         </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Necessitatibus, enim?
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Necessitatibus, enim?
+                        </p>
                     </div>
                 </div>
             </div>
@@ -120,7 +128,7 @@
 
         <!-- SIMULADOR DE VIAJE -->
 
-        <div class="container-fluid pb-lg-5 mb-lg-5" id="travel">
+        <div class="travel__container container-fluid pb-lg-5 mb-lg-5" id="travel">
 
             <div class="travel__title row justify-content-center">
                 <h2>Viajar</h2>
@@ -244,7 +252,7 @@
                         </div>
 
                         <div class="col-10 col-md-3 travel__contenedor__hotel">
-                            <img src="img/five_black.svg" id='hotel_five' alt="">
+                            <img src="img/five_black.svg" id='hotel_five' alt="" class="select">
                         </div>
 
 
@@ -266,22 +274,22 @@
                             <p>Resultado de la cotizacion</p>
                         </div>
 
-                        <div class="col-12 col-md-10 p-md-3">
-                            <span>Nombre: </span>
+                        <div class="col-12 col-md-10 p-md-3" >
+                            <span id="resultNombre"></span>
                         </div>
-                        <div class="col-12 col-md-10 p-md-3">
-                            <span>Destino: </span>
+                        <div class="col-12 col-md-10 p-md-3" >
+                            <span id="resultDestino"></span>
                         </div>
-                        <div class="col-12 col-md-10 p-md-3">
-                            <span>Pasajeres: </span>
+                        <div class="col-12 col-md-10 p-md-3" >
+                            <span id="resultPasajeros"></span>
                         </div>
 
-                        <div class="col-12 col-md-10 p-md-3">
-                            <span>Total: </span>
+                        <div class="col-12 col-md-10 p-md-3" >
+                            <span id="resultTotal"></span>
                         </div>
 
                         <div class="col-12 col-md-5 text-center">
-                            <a class="btn">Volver a cotizar</a>
+                            <button type="reset" class="btn">Volver a cotizar</button>
                         </div>
                         <div class="col-12 col-md-5 text-center">
                             <a class="btn">Fechas disponibles</a>
