--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <img src="img/travel.svg" alt="" />
                     </div>
 
-                    <div class="col-12 col-lg-4 who__content__text">
+                    <div class="col-12 col-lg-4 who__content__text intro__text">
                         <h2>Nosotros</h2>
                         <p>
                             Queremos que disfrutes ofreciendote los mejores tours a los
@@ -128,7 +128,7 @@
 
         <!-- SIMULADOR DE VIAJE -->
 
-        <div class="travel__container container-fluid pb-lg-5 mb-lg-5" id="travel">
+        <div class="travel__container container-fluid pb-lg-5 mb-lg-5 intro__form" id="travel">
 
             <div class="travel__title row justify-content-center">
                 <h2>Viajar</h2>
@@ -310,7 +310,7 @@
             / MENSAJE -->
 
         <div class="container" id="contact">
-            <div class="row justify-content-center mt-5 mb-5">
+            <div class="row justify-content-center mt-5 mb-5 intro__contact">
                 <div class="contact__form col-10 col-lg-6 p-3 p-md-4">
                     <form class="contact__form__content row justify-content-center">
                         <div class="col-12 text-center">
