--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
     <title>Proyecto JS Coderhouse</title>
 </head>
 
-<body>
+<body class="body__hiden">
+
+
+
     <main>
+
+
         <!-- NAV -->
 
         <nav class="navBar navbar navbar-expand-lg justify-content-end">
@@ -39,6 +44,7 @@
                 </div>
             </div>
         </nav>
+
 
         <!-- BANNER HOMMER -->
 
@@ -61,6 +67,8 @@
                 </div>
             </div>
         </div>
+
+
 
         <!-- QUIEN SOMOS  -->
 
@@ -384,9 +392,8 @@
     </div>
 
     <!-- JQUERY -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <!-- JS Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
