correcion de nav, se agrego boton UP

--- a/index.html
+++ b/index.html
@@ -25,18 +25,14 @@
 
     <main>
 
+        <!-- Boton para volver al inicio -->
+        <a id="button__top"><img src="img/up.svg" alt="UP" id="button__img"></a>
 
         <!-- NAV -->
 
-        <nav class="navBar navbar navbar-expand-lg justify-content-end">
-            <!-- LOGO PENDING -->
-            <button class="navbar-toggler navBar__btn__custom" type="button" data-toggle="collapse"
-                data-target="#navBar__content" aria-controls="navBar__content" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navBar__content">
-                <div class="navBar__content__link navbar-nav w-50 justify-content-around">
+        <nav class="navBar navbar navbar-expand justify-content-end">
+            <div class="navbar-collapse justify-content-end" id="navBar__content">
+                <div class="navBar__content__link navbar-nav w-100 justify-content-around">
                     <a class="nav-item nav-link" href="#who">Quien somos</a>
                     <a class="nav-item nav-link" href="#service">Destinos</a>
                     <a class="nav-item nav-link" href="#travel">Viajar</a>
@@ -62,7 +58,7 @@
                     </div>
                 </div>
 
-                <div class="row banner__arrow" onclick="location.href='#who'">
+                <div class="row banner__arrow" onclick="location.href='#travel'">
                     <span class="banner__content__arrow"></span>
                 </div>
             </div>
