--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <nav class="navBar navbar navbar-expand justify-content-end">
             <div class="navbar-collapse justify-content-end" id="navBar__content">
-                <div class="navBar__content__link navbar-nav w-100 justify-content-around">
+                <div class="navBar__content__link navbar-nav justify-content-around">
                     <a class="nav-item nav-link" href="#who">Quien somos</a>
                     <a class="nav-item nav-link" href="#service">Destinos</a>
                     <a class="nav-item nav-link" href="#travel">Viajar</a>
@@ -101,27 +101,18 @@
         <!-- SERVICIOS / DESTINOS DISPONIBLES -->
 
         <div class="container-fluid text-center pt-5 pb-lg-5 w-100" id="service">
+
             <!-- DETALLES DE LOS DESTINOS MODAL -->
 
-            <div class="modal fade text-dark" id="serviceModal" tabindex="-1" role="dialog"
-                aria-labelledby="serviceModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="serviceModalLabel">Modal titulo</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">Cuerpo del modal</div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                                Cerrar
-                            </button>
-                        </div>
-                    </div>
+            <div id="open-modal" class="modal-window">
+                <div class="modal-content">
+                    <a href="#service" title="" class="modal-close">X</a>
+                    <h1 id="modal-titulo">Titulo del viaje</h1>
+                    <div id="modal-descripcion">Descriocion del viaje</div>
                 </div>
             </div>
+        </div>
+
         </div>
 
         <!-- SIMULADOR DE VIAJE -->
