finalizar  estilos formularios contacto y cotizacion

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div class="row travel__form__datos justify-content-center align-content-center p-1"
                             id="tavelDatos">
                             <div class="col-12 p-md-3 pb-3 text-center">
-                                <p>Por favor ingresa tus datos</p>
+                                <h5>Por favor ingresa tus datos</h5>
                             </div>
 
                             <div class="col-12 col-md-5 p-md-3">
@@ -172,7 +172,7 @@
                         <div class="row travel__form__cities justify-content-center align-content-center p-1"
                             id="tavelCities">
                             <div class="col-12 p-md-3 pb-3 text-center">
-                                <p>Seleccione la ciudad de destino</p>
+                                <h5>Seleccione la ciudad de destino</h5>
                             </div>
 
                             <div class="col-10 col-md-4 travel__contenedor__cities" id='' onclick="selectCitie(this)">
@@ -211,7 +211,7 @@
                         <div class="row travel__form__people justify-content-center align-content-center p-1"
                             id="travelPassengers">
                             <div class="col-12 p-md-3 pb-3 text-center">
-                                <p>Cuantos van a viajar ?</p>
+                                <h5>Cuantos van a viajar ?</h5>
                             </div>
 
                             <div class="col-12 col-md-10 p-md-3">
@@ -232,7 +232,7 @@
                         <div class="row travel__form__hotel justify-content-center align-content-center p-1"
                             id="travelHotel">
                             <div class="col-12 p-md-3 pb-3 text-center">
-                                <p>Selecione las estrellas del hotel</p>
+                                <h5>Selecione las estrellas del hotel</h5>
                             </div>
 
                             <div class="col-10 col-md-3 travel__contenedor__hotel">
@@ -291,7 +291,7 @@
                                 Pronto te llegara un correo con las fechas disponibles
                             </span>
 
-                            <div class="col-12 col-md-5 text-center">
+                            <div class="col-8 text-center">
                                 <button type="reset" class="btn form__btn__next">Volver a cotizar</button>
                             </div>
 
