finalziar estilos formularios contacto y cotizacion

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                 Pronto te llegara un correo con las fechas disponibles
                             </span>
 
-                            <div class="col-12 col-md-5 text-center">
+                            <div class="col-8 text-center">
                                 <button type="reset" class="btn form__btn__next">Volver a cotizar</button>
                             </div>
 
